# 
# Zillians MMO
# Copyright (C) 2007-2009 Zillians.com, Inc.
# For more information see http:#www.zillians.com
#
# Zillians MMO is the library and runtime for massive multiplayer online game
# development in utility computing model, which runs as a service for every 
# developer to build their virtual world running on our GPU-assisted machines
#
# This is a close source library intended to be used solely within Zillians.com
# 
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# COPYRIGHT HOLDER(S) BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN
# AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
# CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE. 
#
# Contact Information: info@zillians.com
#

INCLUDE(UsingThorPP)

include_directories(
    ${PROJECT_COMMON_SOURCE_DIR}/include/
    ${PROJECT_LANGUAGE_SOURCE_DIR}/include/
    )

set(out_files "")
zillians_add_thorpp_gen(
#    TARGET stub-client # NOTE: disable if using out_files to trigger build
    OUTPUT_VARIABLE out_files
    INPUT
        ${PROJECT_LANGUAGE_SOURCE_DIR}/include/language/stage/stub/templates/Client/ClientStub_h.lp
#        ${PROJECT_LANGUAGE_SOURCE_DIR}/include/language/stage/stub/templates/Client/GameObjects_h.lp
        ${PROJECT_LANGUAGE_SOURCE_DIR}/include/language/stage/stub/templates/Client/GameService_cpp.lp
        ${PROJECT_LANGUAGE_SOURCE_DIR}/include/language/stage/stub/templates/Client/GameService_h.lp
    OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/generators/Client
    OUTPUT_EXT ".cpp"
    )
zillians_add_thorpp_gen(
#    TARGET stub-gateway-gamecommand-clientcommandobject # NOTE: disable if using out_files to trigger build
    OUTPUT_VARIABLE out_files
    INPUT
        ${PROJECT_LANGUAGE_SOURCE_DIR}/include/language/stage/stub/templates/Gateway/GameCommand/ClientCommandObject_h.lp
        ${PROJECT_LANGUAGE_SOURCE_DIR}/include/language/stage/stub/templates/Gateway/GameCommand/CloudCommandObject_h.lp
        ${PROJECT_LANGUAGE_SOURCE_DIR}/include/language/stage/stub/templates/Gateway/GameCommand/GameCommandTranslator_cpp.lp
        ${PROJECT_LANGUAGE_SOURCE_DIR}/include/language/stage/stub/templates/Gateway/GameCommand/GameModule_module.lp
#        ${PROJECT_LANGUAGE_SOURCE_DIR}/include/language/stage/stub/templates/Gateway/GameObject/ClientGameObject_h.lp
#        ${PROJECT_LANGUAGE_SOURCE_DIR}/include/language/stage/stub/templates/Gateway/GameObject/CloudGameObject_h.lp
#        ${PROJECT_LANGUAGE_SOURCE_DIR}/include/language/stage/stub/templates/Gateway/GameObject/GameGameTranslator_cpp.lp
    OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/generators/Gateway
    OUTPUT_EXT ".cpp"
    )
    
MESSAGE("files generated by ThorPP: ${out_files}")

add_library(zillians-language-main-stages-stub
    language/stage/stub/ThorScriptStubStage.cpp
    language/ThorScriptStubGenerator.cpp
    ${out_files}
    )
    
target_link_libraries(zillians-language-main-stages-stub
    zillians-language-general-stages
    )

add_dependencies(zillians-language-main-stages zillians-language-main-stages-stub)